syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.clearlab.services.auth.gen";
option java_outer_classname = "AuthServie";
package auth;

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service AuthService {
  // Sends a greeting
  rpc login(LoginRequest) returns (LoginResponse) {}
  rpc validateToken(ValidateTokenRequest) returns (Response) {}
}

// QUERIES
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  Error error =1;
  string token = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message Response {
  Error error =1;
  string status = 2;
}

message Error {
  int32 code = 1;
  string message = 2;
}
